--- a/qmvfiles/styles.css
+++ b/qmvfiles/styles.css
@@ -36,15 +36,6 @@ html, body {
 	overflow: auto;
 }
 
-#optionsedit {
-	display: none;
-	height: 100%; 
-	width: calc(85% - 5px);
-	float: left;
-	padding-left: 5px;
-	overflow: auto;
-}
-
 #tagsedit {
 	display: none;
 	height: 100%; 
@@ -276,4 +267,8 @@ form {
 	border-width: 1px;
 	border-style: solid;
 	display: inline-block;
+}
+
+#menusidesettings {
+	display: none;
 }
