--- a/qmvfiles/theme_ultradark.css
+++ b/qmvfiles/theme_ultradark.css
@@ -1,46 +1,21 @@
 html, body {
-	color: lightgray;
-	background-color: #000
+	color: gray;
+	background-color: black
 }
 
-#menu {
-	background-color: #050505;
+#menu_top {
+	background-color: black;
 }
 
-#menucontrols {
-	background-color: #050505;
-}
-
-#navigation ul li{
-	border-color: lightgray;
-}
-
-#navigation ul a{
-	color: lightgray;
-}
-
-#currentpage {
-	background-color: lightgray;
-	color: #000;
-}
-
-#pageselect input {
-    background-color: #000;
-    color: lightgray;
-}
-
-#qvlogotext {
+#searchresults_pagination_compact a {
+	background-color: black;
 	color: gray;
 }
 
-#savenotifier {
+.qmv_logo_text {
+	color: gray;
+}
+
+#save_warning {
 	color: red;
-}
-
-#darkthemebutton {
-	border-color: lightgray;
-}
-
-#lightthemebutton {
-	border-color: lightgray;
 }
